RESOLVED FIXED34448
RenderVideo::intrinsicSizeChanged infinite recursion
https://bugs.webkit.org/show_bug.cgi?id=34448
Summary RenderVideo::intrinsicSizeChanged infinite recursion
Eric Carlson
Reported 2010-02-01 14:00:58 PST
RenderVideo:: intrinsicSizeChanged calls RenderVideo:: intrinsicSizeChanged when it has a poster. Stupid at best, crashing at worse.
Attachments
Proposed patch (2.72 KB, patch)
2010-02-01 14:10 PST, Eric Carlson
mitz: review+
Eric Carlson
Comment 1 2010-02-01 14:01:18 PST
Eric Carlson
Comment 2 2010-02-01 14:10:31 PST
Created attachment 47870 [details] Proposed patch
mitz
Comment 3 2010-02-01 14:17:47 PST
Comment on attachment 47870 [details] Proposed patch Eric told me that there’s no regression test because he was unable to reproduce the crash.
Eric Carlson
Comment 4 2010-02-01 14:21:39 PST
Note You need to log in before you can comment on or make changes to this bug.